<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearProducto">

    <TextView
        android:id="@+id/lblcantidadprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/cantidad"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblfechaprod"
        app:layout_constraintEnd_toStartOf="@+id/txtcantidadprod"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtcantidadprod"
        android:layout_width="78dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/lblfechaprod"
        app:layout_constraintEnd_toStartOf="@+id/lblserieprod" />

    <TextView
        android:id="@+id/lblestadoprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spnestadoprod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spnestadoprod"
        android:layout_width="171dp"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lblfotoprod"
        app:layout_constraintEnd_toStartOf="@+id/spncategoriaprod"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblcategoriaprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spncategoriaprod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spncategoriaprod"
        android:layout_width="171dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/lblfotoprod"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblfechaprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/vencimiento"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblcategoriaprod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblserieprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="48dp"
        android:text="@string/serie"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblfechaprod"
        app:layout_constraintEnd_toStartOf="@+id/txtserieprod" />

    <EditText
        android:id="@+id/txtserieprod"
        android:layout_width="78dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/lblfechaprod"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblnombreprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblprecioprod"
        app:layout_constraintEnd_toStartOf="@+id/txtnombreprod"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtnombreprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtprecioprod"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblprecioprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/precio"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblcantidadprod"
        app:layout_constraintEnd_toStartOf="@+id/txtprecioprod"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtprecioprod"
        android:layout_width="95dp"
        android:layout_height="42dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtcantidadprod"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblfotoprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imgproducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgproducto"
        android:layout_width="107dp"
        android:layout_height="99dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnregistrarprod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/btnregistrarprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/registrar"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btncancelarprod"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btncancelarprod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/cancelar"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        app:layout_constraintBottom_toTopOf="@+id/txtnombreprod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/encabezado" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="136dp"
        android:text="@string/productos"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprin2" />
</androidx.constraintlayout.widget.ConstraintLayout>