<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearClientes">

    <TextView
        android:id="@+id/lbldireccioncli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/direccion"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblcorreocli"
        app:layout_constraintEnd_toStartOf="@+id/txtdireccioncli"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtdireccioncli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtcorreocli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblnitcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/nit"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblgenerocli"
        app:layout_constraintEnd_toStartOf="@+id/txtnitcli"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtnitcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/rbdfemcli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblcorreocli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/correo"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblnitcli"
        app:layout_constraintEnd_toStartOf="@+id/txtcorreocli"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtcorreocli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtnitcli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lbldpicli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dpi"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblcelularcli"
        app:layout_constraintEnd_toStartOf="@+id/txtdpicli"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtdpicli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtcelularcli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblcelularcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/celular"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lbldireccioncli"
        app:layout_constraintEnd_toStartOf="@+id/txtcelularcli"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtcelularcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtdireccioncli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblapellidocli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/apellido"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lbldpicli"
        app:layout_constraintEnd_toStartOf="@+id/txtapellidocli"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtapellidocli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtdpicli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblnombrecli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lblapellidocli"
        app:layout_constraintEnd_toStartOf="@+id/txtnombrecli"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtnombrecli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtapellidocli"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lblgenerocli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/genero"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnregistrarcli"
        app:layout_constraintEnd_toStartOf="@+id/rbdfemcli"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/rbdmascli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:text="Masculino"
        app:layout_constraintBottom_toTopOf="@+id/btncancelarcli"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioButton
        android:id="@+id/rbdfemcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Feminino"
        app:layout_constraintBottom_toTopOf="@+id/btnregistrarcli"
        app:layout_constraintEnd_toStartOf="@+id/rbdmascli" />

    <Button
        android:id="@+id/btnregistrarcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/registrar"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btncancelarcli"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btncancelarcli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/cancelar"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtnombrecli"
        app:srcCompat="@drawable/encabezado"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Clientes"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="100dp"
        android:layout_height="92dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprin2"
        tools:layout_editor_absoluteX="271dp" />
</androidx.constraintlayout.widget.ConstraintLayout>